Gtk-3.18: [Budgie-Desktop] Fix 'running-dot' flickering
Border-image transition causes visual glitches.

--- a/gtk-3.0/_3rd-party.scss
+++ b/gtk-3.0/_3rd-party.scss
@@ -63,8 +63,14 @@ $orientation: ((top, bottom),
   .launcher {
     border: 2px solid transparent;
     background-image: none;
-    transition: all 100ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
     opacity: 0.5;
+    transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    transition-property: opacity,
+                         border-color,
+                         background-color,
+                         background-image,
+                         box-shadow;
+    transition-duration: 0.2s;
     &:hover {
       opacity: 0.75;
       -gtk-image-effect: highlight;
