--- a/gtk-3.0/gtk-dark.css
+++ b/gtk-3.0/gtk-dark.css
@@ -6797,8 +6797,10 @@ TerminalWindow .scrollbar.trough {
 .budgie-panel .launcher {
   border: 2px solid transparent;
   background-image: none;
-  transition: all 100ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  opacity: 0.5; }
+  opacity: 0.5;
+  transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transition-property: opacity, border-color, background-color, background-image, box-shadow;
+  transition-duration: 0.2s; }
   .budgie-panel .launcher:hover {
     opacity: 0.75;
     -gtk-image-effect: highlight; }
